--- a/src/styles/_MediaQueries.scss
+++ b/src/styles/_MediaQueries.scss
@@ -16,6 +16,7 @@
     .nav-links {
       width: 100%;
       justify-content: space-around;
+      padding: 0;
     }
   }
 
